Add(birthday): allow embeds on message send
Also fix birthday being delayed.